# glaze-vs-nlohmann-compile-time-performance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  data.json
src/: glazeMain.cpp  nlohmannMain.cpp
